--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>day02_MybatisCRUD</module>
+        <module>day02_Mybatisdao</module>
+        <module>day02_MybatisCRUD_DaoImpl</module>
     </modules>
 
     <properties>
